# strtype

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml  windows.yml
include/strenum/: strenum.hpp
include/strenum/details/: fixed_string.hpp
include/strtype/: strtype.hpp
tests/: CMakeLists.txt  tests.cpp
